--- a/styles.css
+++ b/styles.css
@@ -1,48 +1,102 @@
-/* Style reset for the whole doc */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-	margin: 0;
+html body {
 	padding: 0;
+	margin: 0;
+	background-color: #F9FAFB;
+	font-family: Arial, Helvetica, sans-serif;
+}
+
+.page {
+	display: flex;
+	align-items: center;
+	gap: 30px;
+}
+
+h1, h2, .para {
+	font-size: 24px;
+	max-width: 900px;
+}
+
+li {
+	list-style-type: none;
+	flex-wrap: wrap;
+	width: 200px;
+	flex-basis: 45%;
+	display: flex;
+	flex-direction: column;
+	gap: 4px;
+}
+
+label {
+	font-size: 14px;
+}
+
+input {
+	margin-bottom: 20px;
+	padding: 6px;
+	border: 1px solid #E5E7EB;
+	border-radius: 6px;
+	font-size: 14px;
+}
+
+input:focus {
+	outline: none;
+	border: 1px solid #0E7AFE;
+	box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+}
+
+ul {
+	padding: 0;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
+}
+
+.image-container {
+	height: 100vh;
+	width: 33%;
+/* 	position: relative; */
+}
+
+img {
+	width: 100%;
+}
+
+.background-image {
+	height: 100%;
+/* 	position: absolute;
+	z-index: -1; */
+}
+
+.logo-container {
+/* 	position: absolute; */
+	width: 100%;
+}
+
+.app-logo {
+/* 	position: absolute; */
+}
+
+.content {
+	width: 60%;
+}
+
+.form-container {
+	background-color: white;
+	padding: 10px;
+}
+
+button {
+	background-color: #F7931E;
+	color: white;
 	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-	display: block;
-}
-body {
-	line-height: 1;
-}
-ol, ul {
-	list-style: none;
-}
-blockquote, q {
-	quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-	content: '';
-	content: none;
-}
-table {
-	border-collapse: collapse;
-	border-spacing: 0;
+	border-radius: 8px;
+	padding: 18px 48px;
+	font-size: 16px;
+	font-weight: bold;
 }
 
-/* End of style reset */
-
+p a {
+	color: #F7931E;
+	text-decoration: none;
+	font-weight: bold;
+}
